--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,31 +3,27 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+  --background: #2f2f2f;
+  --text-color: #f2f2f2;
+  --brand-color: #FFCB74;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background-color: var(--background);
+  color: var(--text-color);
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+li {
+  list-style: none;
+}
+
+.lucide {
+  width: 28px;
+  height: 28px;
+}
+
+:focus {
+  box-shadow: 0 0 0 2px var(--brand-color);
+  outline: 0;
+  border-radius: 2px;
 }
